# RedPitaya-DSP

./: .gitignore  AUTHORS  Licence.txt  Makefile.am  NEWS  README  README.md  RPmemmap.h  actgen.py  bootstrap.sh  clientExample.py  configure.ac  dsp.c  fpga_awg.c  makefile  rpouts.c  rpouts.h  server.py  timer.c  timer.h
doc/: notes
include/: RPmemmap.h  actionTable.h  fpga_awg.h  gpioCont.h  gpioControl.h  rpouts.h  timeControl.h  timer.h
python/: actgen.py  requirements.txt  server.py
src/: actionTable.c  dsp.c  dsp_test.c  fpga_awg.c  fpga_awg.h  gpioCont.c  gpioControl.c  primeNums.c  rpouts.c  rpouts.h  server.py  timeControl.c  timer.c
standalone/: xil_io.h  xtime_l.c
